fixed text alignment

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ div.card-content {
     justify-content: center;
     align-items: center;
     overflow: auto;
+    text-align: center;
 }
 
 button.read, button.remove {
